# diffy

./: .envrc  .gitattributes  .gitignore  .gitmodules  .todo.md  AGENTS.md  Cargo.toml  PERF.md  Packager.toml  README.md  devenv.nix  diff.html  flake.nix
.cargo/: config.toml
.github/workflows/: fuzz.yml  generate-update-manifest.mjs  package.yml  update-phosphor-index.mjs  update-phosphor-index.yml
assets/: phosphor-index.windows-x86_64.json
assets/packaging/AppIcon.icon/: icon.json
crates/carbon/: AGENTS.md  Cargo.toml  PROJECTION.md
crates/carbon/benches/: carbon_core.rs
crates/carbon/fixtures/patches/: binary_mode.patch  long_line.patch  many_small_files.patch  mode_only.patch  no_newline.patch  rename_mode.patch
crates/carbon/src/: inline.rs  lib.rs  model.rs  patch.rs  projection.rs  review.rs  text.rs
crates/carbon/tests/: allocation.rs  invariants.rs  properties.rs  review_projection.rs
crates/difftastic/src/display/: json.rs
crates/difftastic/src/parse/: tree_sitter_parser.rs
crates/halogen/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
crates/halogen-macros/: AGENTS.md  Cargo.toml
crates/halogen-macros/src/: lib.rs
crates/halogen-macros/tests/: view_macro.rs
crates/halogen/src/: color.rs  event.rs  focus.rs  geometry.rs  hit.rs  identity.rs  lib.rs  reactive.rs  retained.rs  scene.rs  semantic.rs  style.rs  style_state.rs
crates/halogen/tests/: store_derive.rs
crates/phosphor/: AGENTS.md  Cargo.toml  build.rs
crates/phosphor/src/: error.rs  language.rs  lib.rs  pack.rs  types.rs
data/: themes.json
examples/: render_fixture.rs
fuzz/: Cargo.toml
fuzz/corpus/inline_diff/: punct.txt  unicode.txt  words.txt
fuzz/corpus/patch_parse/: crash-huge-hunk-count  crash-marker-after-empty-line  crash-no-newline-marker-mutation  deleted_file.diff  empty_hunk.diff  invalid_hunk_header.diff
fuzz/corpus/patch_projection/: binary.diff  new_file.diff  no_newline.diff  rename.diff
fuzz/corpus/review_anchor/: basic.diff  multi_hunk.diff
fuzz/corpus/text_store/: crlf_no_trailing.txt
fuzz/fuzz_targets/: inline_diff.rs  patch_parse.rs  patch_projection.rs  review_anchor.rs  text_store.rs
scripts/: cargo-run-signed-macos.sh  dev-loop.sh  generate-packaging-assets.sh  generate_ghostty_themes.py  install-macos-dev-app.sh  install.ps1  install.sh  package-macos-release.sh  prepare-macos-icon-assets.sh  setup-macos-dev-codesign.sh
src/: actions.rs  effects.rs  events.rs  fonts.rs  hot_reload.rs  lib.rs  main.rs
src/ai/: diff_compress.rs  mod.rs  prompt.rs  stream.rs
src/app_runtime/: git_worker.rs  runtime.rs  services.rs  watcher.rs
src/apprt/: compare.rs  git_worker.rs  mod.rs  progress.rs  runtime.rs  services.rs  syntax.rs  vcs_worker.rs  watcher.rs
src/core/: error.rs  frecency.rs  http.rs  mod.rs  perf.rs  review.rs  themes.rs  update.rs
src/core/automation/: annotation.rs  document.rs  error.rs  ids.rs  mod.rs
src/core/compare/: mod.rs  progress.rs  service.rs  spec.rs  stats.rs  text.rs
src/core/compare/backends/: difftastic.rs  git_diff.rs  mod.rs
src/core/diff/: mod.rs  types.rs  unified_parser.rs  word_diff.rs
src/core/forge/github/: api.rs  device_flow.rs  mod.rs  pull_request.rs
src/core/rendering/: flat_rows.rs  layout_engine.rs  mod.rs  prepared_rows.rs
src/core/syntax/: annotator.rs  highlighter.rs  mod.rs
src/core/text/: mod.rs  token.rs
src/core/vcs/: backend.rs  cache.rs  discovery.rs  mod.rs  model.rs  patch.rs
src/core/vcs/git/: adapter.rs  mod.rs  patch.rs  service.rs  status.rs
src/core/vcs/github/: api.rs  device_flow.rs  mod.rs
src/core/vcs/jj/: cli.rs  mod.rs  parse.rs  service.rs
src/editor/: input_element.rs  mod.rs
src/editor/diff/: anchor.rs  decoration.rs  display_layout.rs  element.rs  expansion.rs  mod.rs  review.rs  state.rs  strip_layout.rs
src/editor/diff/element/: hit_test.rs  layout.rs  mod.rs  paint.rs  tests.rs
src/input/: keyboard.rs  keymap.rs  mod.rs  pointer.rs  scroll.rs
src/platform/: automation.rs  macos_window.rs  mod.rs  persistence.rs  review_store.rs  secrets.rs  startup.rs
src/render/: capture.rs  mod.rs  renderer.rs  scene.rs  shaders.rs  text.rs
src/ui/: accessibility.rs  actions.rs  animation.rs  app.rs  design.rs  editor_element.rs  element.rs  harness.rs  hud.rs  icons.rs  input.rs  mod.rs  nonicons.rs  palette.rs  settings_page.rs  shell.rs  sidebar.rs  state.rs  status_bar.rs  style.rs  symbols.rs  theme.rs  title_bar.rs  toolbar.rs  ui_signals.rs  vcs.rs  virtual_list.rs  window_chrome.rs
src/ui/components/: avatar.rs  badge.rs  behavior.rs  breadcrumb.rs  button.rs  checkbox.rs  compare_progress.rs  context_menu.rs  dropdown.rs  file_icon.rs  file_tree.rs  kbd.rs  mod.rs  modal.rs  picker.rs  popover.rs  progress.rs  search_field.rs  segmented.rs  sidebar.rs  sidebar_skeleton.rs  stat_summary.rs  tabs.rs  toast.rs  toolbar.rs  tooltip.rs
src/ui/editor/: decoration.rs  display_layout.rs  element.rs  expansion.rs  mod.rs  render_doc.rs  review.rs  state.rs
src/ui/input/: mod.rs  pointer.rs  scroll.rs
src/ui/overlays/: account_menu.rs  auth.rs  command_palette.rs  compare_menu.rs  compare_sheet.rs  confirmation.rs  mod.rs  picker.rs  picker_modal.rs  publish_menu.rs  pull_request.rs  ref_picker.rs  repo_picker.rs  shortcuts.rs  theme_picker.rs
src/ui/state/: ai.rs  app.rs  compare.rs  editor.rs  file_list.rs  github.rs  mod.rs  overlay.rs  presentation.rs  repository.rs  settings.rs  syntax.rs  tests.rs  text_compare.rs  text_edit.rs  ui.rs  update.rs  working_set.rs  workspace.rs
tests/: capture_ui.rs  ui_surfaces.rs
tests/support/: mod.rs
