[workspace]
members = [".", "crates/halogen", "crates/halogen-macros"]
exclude = ["crates/difftastic"]

[package]
name = "diffy"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[features]
hot-reload = ["dep:tungstenite", "dep:subsecond"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
dirs = "6.0"
glyphon = "0.10.0"
git2 = "0.20"
pollster = "0.4.0"
taffy = "0.9.2"
rfd = "0.17.2"
ureq = { version = "3.3", features = ["json"] }
unicode-segmentation = "1.12"
arboard = { version = "3", features = ["wayland-data-control"] }
neo_frizbee = { version = "0.8", features = ["match_end_col"] }
heed = "0.22"
parking_lot = "0.12"
rayon = "1.10"
tempfile = "3.14"
webbrowser = "1.0"
halogen = { path = "crates/halogen" }
vendored_difftastic = { package = "difftastic", path = "crates/difftastic" }
resvg = "0.45"
wgpu = "28.0.0"
winit = { version = "0.30" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
subsecond = { version = "0.7", optional = true }
tungstenite = { version = "0.29", optional = true }
notify = "8.2.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
llm = { version = "1.3", default-features = false, features = ["openai", "anthropic", "rustls-tls"] }
tokio = { version = "1", default-features = false, features = ["rt", "sync", "macros"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

[[bin]]
name = "diffy"
path = "src/main.rs"

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
lto = true
codegen-units = 1
