[workspace]
members = [".", "crates/halogen", "crates/halogen-macros", "crates/phosphor"]
exclude = ["crates/difftastic"]

[package]
name = "diffy"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "A native GPU-accelerated Git diff viewer built in Rust."
license = "GPL-3.0-only"
repository = "https://github.com/seatedro/diffy"
homepage = "https://github.com/seatedro/diffy"

[features]
hot-reload = ["dep:tungstenite", "dep:subsecond"]
difftastic = ["dep:vendored_difftastic"]

[dependencies]
clap = { version = "4.5", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
dirs = "6.0"
glyphon = "0.10.0"
git2 = "0.20"
pollster = "0.4.0"
taffy = "0.9.2"
rfd = "0.17.2"
unicode-segmentation = "1.12"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
neo_frizbee = { version = "0.8", features = ["match_end_col"] }
heed = "0.22"
parking_lot = "0.12"
rayon = "1.10"
tempfile = "3.14"
webbrowser = "1.0"
halogen = { path = "crates/halogen" }
phosphor = { path = "crates/phosphor" }
vendored_difftastic = { package = "difftastic", path = "crates/difftastic", optional = true }
resvg = { version = "0.45", default-features = false }
wgpu = "28.0.0"
winit = { version = "0.30" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "registry", "std"] }
profiling = "1.0"
subsecond = { version = "0.7", optional = true }
tungstenite = { version = "0.29", optional = true }
notify = "8.2.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", default-features = false, features = ["rt"] }

[[bin]]
name = "diffy"
path = "src/main.rs"

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
