[workspace]
members = [".", "crates/carbon", "crates/halogen", "crates/halogen-macros", "crates/phosphor"]
exclude = ["crates/difftastic"]

[workspace.package]
version = "0.1.8"

[package]
name = "diffy"
version.workspace = true
edition = "2024"
rust-version = "1.92"
description = "A native GPU-accelerated Git diff viewer built in Rust."
license = "GPL-3.0-only"
repository = "https://github.com/seatedro/diffy"
homepage = "https://github.com/seatedro/diffy"

[package.metadata.packager]
product-name = "Diffy"
identifier = "io.github.seatedro.diffy"
publisher = "seatedro"
out-dir = "dist/packages"
binaries-dir = "target/release"
before-packaging-command = "bash scripts/prepare-macos-icon-assets.sh && cargo build --release"
icons = [
  "assets/packaging/macos/generated/*.icns",
  "assets/packaging/diffy.ico",
  "assets/packaging/png/*.png",
]
resources = [
  "LICENSE",
  "assets/packaging/macos/generated/Assets.car*",
]

[[package.metadata.packager.binaries]]
main = true
path = "diffy"

[package.metadata.packager.macos]
info-plist-path = "assets/packaging/macos/generated/Info.plist"

[package.metadata.packager.windows]
allow-downgrades = false

[package.metadata.packager.linux]
generate-desktop-entry = true

[package.metadata.packager.nsis]
installer-mode = "currentUser"
appdata-paths = ["$LOCALAPPDATA/$PUBLISHER/$PRODUCTNAME"]

[features]
hot-reload = ["dep:tungstenite", "dep:subsecond"]
difftastic = ["dep:vendored_difftastic"]

[dependencies]
clap = { version = "4.5", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
dirs = "6.0"
glyphon = "0.10.0"
gix = { version = "0.83", default-features = false, features = ["blob-diff", "max-performance-safe", "revision", "sha1"] }
pollster = "0.4.0"
taffy = "0.9.2"
rfd = "0.17.2"
unicode-segmentation = "1.12"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
neo_frizbee = { version = "0.8", features = ["match_end_col"] }
heed = "0.22"
parking_lot = "0.12"
rayon = "1.10"
tempfile = "3.14"
webbrowser = "1.0"
halogen = { path = "crates/halogen" }
carbon = { path = "crates/carbon" }
phosphor = { path = "crates/phosphor", default-features = false }
vendored_difftastic = { package = "difftastic", path = "crates/difftastic", optional = true, default-features = false, features = ["dynamic-languages"] }
resvg = { version = "0.45", default-features = false }
wgpu = "28.0.0"
winit = { version = "0.30" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "registry", "std"] }
profiling = "1.0"
subsecond = { version = "0.7", optional = true }
tungstenite = { version = "0.29", optional = true }
notify = "8.2.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", default-features = false, features = ["rt"] }
ring = "0.17"
raw-window-handle = "0.6"
mimalloc = { version = "0.1.50", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSButton", "NSControl", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }

[dev-dependencies]
git2 = { version = "0.20", default-features = false }

[[bin]]
name = "diffy"
path = "src/main.rs"

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
