[package]
name = "phosphor"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
thiserror = "2"
tree-sitter = "~0.26.3"
tree-sitter-language = "0.1.3"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-nix = "0.3.0"
tree-sitter-python = "0.23.5"
tree-sitter-rust-orchard = "0.16.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-zig = "1.1.2"
