[package]
name = "phosphor"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
dirs = "6.0"
libloading = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2"
tree-sitter = "~0.26.3"
tree-sitter-language = "0.1.3"
